fix extra scrollbars

--- a/frontend/src/components/ProjectComponents/ProjectView/ProjectTabs/EVM/EVM.css
+++ b/frontend/src/components/ProjectComponents/ProjectView/ProjectTabs/EVM/EVM.css
@@ -1,12 +1,16 @@
 .evm {
     width: 100%;
     height: 100%;
-    overflow-x: scroll;
     overflow-y: scroll;
 }
 
+.evm {
+    scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+}
+
+/* Make the scrollbar background transparent */
 .evm::-webkit-scrollbar-track {
-    background-color: transparent;
+    background-color: transparent; /* Ensure the track is transparent */
 }
 
 .evm .evm-component .chart-row {
