--- a/frontend/src/components/ProjectComponents/ProjectView/ProjectTabs/Summary/Summary.css
+++ b/frontend/src/components/ProjectComponents/ProjectView/ProjectTabs/Summary/Summary.css
@@ -1,17 +1,18 @@
 .summary-container {
-    overflow-x: scroll;
     overflow-y: scroll;
 }
 
-.evm-summary {
-    width: 100%;
-    height: 100%;
-    overflow-x: auto;
-    overflow-y: auto;
+.summary-container {
+    scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
 }
 
-.evm-summary::-webkit-scrollbar-track {
-    background-color: transparent;
+/* Make the scrollbar background transparent */
+.summary-container::-webkit-scrollbar-track {
+    background-color: transparent; /* Ensure the track is transparent */
+}
+
+.evm-summary {
+
 }
 
 .evm-summary .evm-component {
